src/test/ui/error-codes/E0308-4.stderr
error[E0308]: mismatched types
  --> $DIR/E0308-4.rs:4:9
   |
LL |     match x {
   |           - this match expression has type `u8`
LL |         0u8..=3i8 => (),
   |         ^^^^^^^^^ expected u8, found i8

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
